auth tests working
